Settings tab + Minor fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
             <a class="nav-link" routerLink="adminui">Admin UI</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="logs">Logs</a>
+            <a class="nav-link" routerLink="settings">Settings</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="replay">Replay</a>
