--- a/src/app/adminui/adminui.component.css
+++ b/src/app/adminui/adminui.component.css
@@ -14,6 +14,11 @@
     padding-top: 20px;
 }
 
+button {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+
 .btn {
     width: 100px;
     background-color: #4CAF50;
