--- a/src/app/settings/settings.component.css
+++ b/src/app/settings/settings.component.css
@@ -14,6 +14,11 @@
     padding-top: 20px;
 }
 
+button {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+
 .table-hover tr:hover td{
     background-color: #8d8a8a;
 }
