Settings tab and Minor fixes

--- a/src/app/replay/replay.component.css
+++ b/src/app/replay/replay.component.css
@@ -193,3 +193,10 @@ p {
   .example-container > * {
     width: 100%;
   }
+
+  .mainTextArea {
+      padding-left: 20px;
+      padding-right: 20px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+  }
