--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -16,7 +16,7 @@
 
     <div class="responsive_table">
 
-      <table mat-table [dataSource]="users$" class="mat-elevation-z8" *ngIf="showHide">
+      <!-- <table mat-table [dataSource]="users$" class="mat-elevation-z8" *ngIf="showHide">
 
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef> ID </th>
@@ -48,7 +48,10 @@
 
         <tr mat-header-row *matHeaderRowDef="columns"></tr>
         <tr mat-row *matRowDef="let row; columns: columns;"></tr>
-      </table>
+      </table> -->
+
+
+      <ng2-smart-table [settings]="settings" [source]="users$" *ngIf="showHide"></ng2-smart-table>
     </div>
 
 
