--- a/src/app/testui/testui.component.css
+++ b/src/app/testui/testui.component.css
@@ -115,9 +115,14 @@ mat-card-title {
       width: 100%;
   }
 
-
-/* mat-raised-button {
-    font-size: 24px; 
+:host ::ng-deep file-drop .drop-zone{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-  } */
+    font-size: 24px;
+    border: 2px dotted #727272;
+    color: rgb(255, 255, 255);
+    border-radius: 30px;
+    margin-top: 15px;
+    margin-bottom: 20px;
+}
+
 
