--- a/src/app/settings/settings.component.css
+++ b/src/app/settings/settings.component.css
@@ -5,7 +5,7 @@
 }
 
 .container-fluid {
-    width: 100%;
+    max-width: 100%;
     min-height: 100%;
     /* background-color: #5b5b5b; */
     background-color: rgb(231, 236, 236);
