--- a/src/app/testui/testui.component.css
+++ b/src/app/testui/testui.component.css
@@ -106,6 +106,18 @@ mat-card-title {
     font-family: Verdana, Geneva, Tahoma, sans-serif
 }
 
+/* .mat-radio-button.mat-accent .mat-radio-inner-circle {
+    background-color: rgb(66, 134, 244);
+  }
+
+  .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
+    border-color: rgb(66, 134, 244);
+  }
+
+  .mat-radio-button.mat-accent .mat-radio-ripple .mat-ripple-element {
+    background-color:rgba(66, 134, 244,.26);
+  } */
+
 .example-card {
     width: 100%;
     height: 31%;
@@ -125,4 +137,14 @@ mat-card-title {
     margin-bottom: 20px;
 }
 
+::ng-deep  .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle{
+    border-color: orange;
+}
 
+::ng-deep  .mat-radio-button.mat-accent .mat-radio-inner-circle{
+    background-color: orange;
+}
+
+::ng-deep  .mat-radio-button.mat-accent .mat-radio-ripple .mat-ripple-element {
+    background-color: rgba(#4f9182, 0.26);
+}
