--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,15 @@ html {
     /* display: inline-flex; */
     margin:0; padding:0; 
 }
+
+::ng-deep  .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle{
+    border-color: orange;
+}
+
+::ng-deep  .mat-radio-button.mat-accent .mat-radio-inner-circle{
+    background-color: orange;
+}
+
+::ng-deep  .mat-radio-button.mat-accent.mat-radio-ripple .mat-ripple-element {
+    background-color: rgba(#4f9182, 0.26);
+}
