--- a/src/app/testui/testui.component.css
+++ b/src/app/testui/testui.component.css
@@ -145,6 +145,6 @@ mat-card-title {
     background-color: orange;
 }
 
-::ng-deep  .mat-radio-button.mat-accent .mat-radio-ripple .mat-ripple-element {
-    background-color: rgba(#4f9182, 0.26);
+::ng-deep .mat-radio-button.mat-accent .mat-radio-ripple .mat-ripple-element {
+    background-color:rgba(66, 134, 244,.26);
 }
